--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -10,6 +10,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Prepare java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
       - name: Install Clojure CLI
         uses: DeLaGuardo/setup-clojure@12.5
         with:
@@ -17,13 +23,13 @@ jobs:
           clj-kondo: latest
           cljfmt: latest
 
-      - name: Check format
-        run: cljfmt fix
+      - name: Check format lab2
+        run: cljfmt check
 
-      - name: Lint lab1
-        run: clj-kondo
+      - name: Lint lab2
+        run: clj-kondo --lint src/lab2
 
-      - name: Test Lab1
+      - name: Test Lab2
         run: clj -X:test
 
 
