--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -10,12 +10,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Prepare java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
       - name: Install Clojure CLI
         uses: DeLaGuardo/setup-clojure@12.5
         with:
@@ -30,6 +24,4 @@ jobs:
         run: clj-kondo --lint src/lab2
 
       - name: Test Lab2
-        run: clj -X:test
-
-
+        run: clojure -X:test
